grocy/templates/grocy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: grocy
  name: grocy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: grocy
status:
  loadBalancer: {}
