grocy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email, x-auth-request-access-token, Authorization, X-Auth-Request-Preferred-Username
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.gorill.cloud/oauth2/start?rd=$scheme://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.gorill.cloud/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $name_upstream_1 $upstream_cookie_name_1;

      access_by_lua_block {
        if ngx.var.name_upstream_1 ~= "" then
          ngx.header["Set-Cookie"] = "name_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
        end
      }
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $user $upstream_http_x_auth_request_user;
      auth_request_set $email $upstream_http_x_auth_request_email;
      proxy_set_header X-User $user;
      proxy_set_header X-Email $email;
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  rules:
  - host: "grocy.gorill.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocy
            port:
              number: 80
